fixed modal spacing

--- a/style.css
+++ b/style.css
@@ -61,15 +61,16 @@ img {
   top: 0;
   left: 0;
   justify-content: center;
-  align-items: center;
   height: 100%;
   width: 100%;
   background-color: black;
   z-index: 2;
 }
 
-.hide {
-  display: none;
+.loading-img {
+  width: 100%;
+  height: 90vh;
+  object-fit: contain;
 }
 
 .image-container {
